<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/hold_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hold_price"
            android:textSize="20dp"/>
        <EditText
            android:id="@+id/show_hold_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:hint="hello edit text"
            android:inputType="numberDecimal"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/hold_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hold_share"
            android:textSize="20dp"/>
        <EditText
            android:id="@+id/show_hold_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:inputType="numberDecimal"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:id="@+id/curr_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/curr_price"
                android:textSize="20dp"
                android:layout_weight="1"
                />
            <EditText
                android:id="@+id/show_curr_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginLeft="10dp">
            <TextView
                android:id="@+id/change_percent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/change_percent"
                android:textSize="20dp"
                android:layout_weight="3"
                />
            <EditText
                android:id="@+id/show_change_percent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="numberSigned"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="%"
                android:textSize="20dp"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/target_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/target_price"
            android:textSize="20dp"/>
        <EditText
            android:id="@+id/show_target_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:inputType="numberDecimal"
            />
    </LinearLayout>
    
    <Button
        android:id="@+id/start_cal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_cal"
        android:textSize="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textSize="20dp"
            />
        <TextView
            android:id="@+id/show_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="结果显示在这里"
            android:layout_marginLeft="10dp"
            android:textSize="20dp"/>
    </LinearLayout>
</LinearLayout>